--- a/roles/kafka_connect/files/jdbc-postgres.properties
+++ b/roles/kafka_connect/files/jdbc-postgres.properties
@@ -1,15 +1,13 @@
-name = jdbc-postgres
+name = jdbc-postgres-address
 connector.class = io.confluent.connect.jdbc.JdbcSourceConnector
 key.converter = org.apache.kafka.connect.storage.StringConverter
 value.converter = org.apache.kafka.connect.storage.StringConverter
-transforms = createKey, extractKey, extractValue
+transforms = createKey, extractValue
 transforms.createKey.type = org.apache.kafka.connect.transforms.ValueToKey
 transforms.createKey.fields = email 
-transforms.extractKey.type = org.apache.kafka.connect.transforms.ExtractField$Key
-transforms.extractKey.field = email
 transforms.extractValue.type = org.apache.kafka.connect.transforms.ExtractField$Value
 transforms.extractValue.field = address
-connection.url = postgres://mtukus:mertberk@postgresvm:5470/customer
+connection.url = jdbc:postgresql://postgresvm:5470/customer
 connection.user = mtukus
 connection.password = mertberk
 table.whitelist = customers
