--- a/roles/kafka_brokers/tasks/main.yml
+++ b/roles/kafka_brokers/tasks/main.yml
@@ -12,6 +12,7 @@
   #- reload-service.yml
   #- fetch-request-cert.yml
   #- send-signed-certs.yml
+  #- get-topics.yml
   #- stop-kafka-service.yml
   #- start-kafka-service.yml
   - status-kafka-service.yml
