--- a/roles/kafka_connect/tasks/move-file-conn.yml
+++ b/roles/kafka_connect/tasks/move-file-conn.yml
@@ -10,7 +10,7 @@
     src: /home/confluent/confluent-7.3.1/etc/kafka/connect-file-sink.properties
     dest: /home/confluent/confluent-7.3.1/etc/kafka/connectorprops/
 
-- name: Remove source file
+- name: Remove sink file connector file
   become: true
   file:
     path: /home/confluent/confluent-7.3.1/etc/kafka/connect-file-sink.properties
@@ -22,10 +22,6 @@
     path: /home/confluent/confluent-7.3.1/etc/kafka/connect-file-source.properties
     state: absent
 
-- name: Remove source file connector file
-  become: true
-  file:
-    path: /home/confluent/confluent-7.3.1/etc/kafka/connect-file-sink.properties
-    state: absent
+
  
     
