--- a/roles/kafka_brokers/files/kafka.service
+++ b/roles/kafka_brokers/files/kafka.service
@@ -3,9 +3,9 @@ Description=Confluent Kafka Server
 
 [Service]
 User=confluent
-ExecStart=/home/confluent/confluent-7.3.1/bin/kafka-server-start /home/confluent/confluent-7.3.1/etc/kafka/kraft/{{server_properties}}
-Restart=always
-RestartSec=15s
+ExecStart=/home/confluent/confluent-7.3.1/bin/kafka-server-start /home/confluent/confluent-7.3.1/etc/kafka/kraft/server.properties
+#Restart=always
+#RestartSec=15s
 
 [Install]
 WantedBy=multi-user.target
