--- a/roles/kafka_connect/tasks/insync-connector.yml
+++ b/roles/kafka_connect/tasks/insync-connector.yml
@@ -16,11 +16,22 @@
     dest: /home/confluent/confluent-7.3.1/etc/kafka/connectorprops/datagen-users.config
     force: true
 
-- name: Copy the files to the machines
+- name: Copy and overwrite mongodb-sink.json file to the remote machines
   copy:
     src: mongodb-sink.json
     dest: /home/confluent/confluent-7.3.1/etc/kafka/connectorprops/mongodb-sink.json
     force: true
 
-#- name: Check checksum of the files if they are equal
+
+- name: Copy and overwrite the mongo-source.json file to the remote machines
+  copy:
+    src: mongodb-source.json
+    dest: /home/confluent/confluent-7.3.1/etc/kafka/connectorprops/mongodb-source.json
+    force: true
+
+- name: Copy and overwrite the minio-sink.json file to the remote machines
+  copy:
+    src: minio-sink.json
+    dest: /home/confluent/confluent-7.3.1/etc/kafka/connectorprops/minio-sink.json
+    force: true
 
